added water cycle

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <img src="images/burrito.jpeg" alt="Photo of Burrito">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
       <ol>
-        <li>Bootstrap</li>
-        <li>Materialize</li>
+        <li><a href="ranch">Ranch Project</li>
+        <li><a href="water_cycle">Water Cycle</li>
         <li>Foundation</li>
       </ol>
     </main>
