--- a/index.html
+++ b/index.html
@@ -3,38 +3,16 @@
   <head>
   <meta charset="UTF-8">
     <link href="css/styles.css" rel="stylesheet">
-    <title>The Web Myster: Home</title>
+    <title>Test Page</title>
   </head>
 
   <body>
     <header>
-      <h1>The Web Myster</h1>
-      <h2>Best Coder in Town</h2>
-
-      
+      <h1>Click the banner!</h1>
     </header>
     
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Agenda</a></li>
-        <li><a href="#">Schedule</a></li>
-      </ul>
-    </nav>
-
     <main>
-      <h1>Home</h1>
-      <img src="images/burrito.jpeg" alt="Photo of Burrito">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-      <ol>
-        <li><a href="ranch">Ranch Project</li>
-        <li><a href="water_cycle">Water Cycle</li>
-        <li>Foundation</li>
-      </ol>
+      <h1><a href="https://www.google.com">Home</h1>
     </main>
-
-    <footer>
-      &copy; Paul Cheney 2018
-    </footer>
   </body>
 </html>
