commit from macbook pro

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://clovanote.onelink.me/GG6D?pid=navercorp&c=clovanote_%EB%84%A4%EC%9D%B4%EB%B2%84%EC%95%B1%ED%99%9C%EC%9A%A9%EB%B0%B1%EC%84%9C&af_dp=naverclovanote%3A%2F%2Flaunch&af_ios_url=https%3A%2F%2Fapps.apple.com%2Fkr%2Fapp%2Fid1530010245" target="_blank">OneLink with target blank</h1>
+      <h1><a href="https://manhwakyung-beta.onelink.me/BqsP/1mzialpq">https://manhwakyung-beta.onelink.me/BqsP/1mzialpq</h1>
+      <!-- <h1><a href="https://clovanote.onelink.me/GG6D?pid=navercorp&c=clovanote_%EB%84%A4%EC%9D%B4%EB%B2%84%EC%95%B1%ED%99%9C%EC%9A%A9%EB%B0%B1%EC%84%9C&af_dp=naverclovanote%3A%2F%2Flaunch&af_ios_url=https%3A%2F%2Fapps.apple.com%2Fkr%2Fapp%2Fid1530010245" target="_blank">OneLink with target blank</h1>
       <h1><a href="https://clovanote.onelink.me/GG6D?pid=navercorp&c=clovanote_%EB%84%A4%EC%9D%B4%EB%B2%84%EC%95%B1%ED%99%9C%EC%9A%A9%EB%B0%B1%EC%84%9C&af_dp=naverclovanote%3A%2F%2Flaunch&af_ios_url=https%3A%2F%2Fapps.apple.com%2Fkr%2Fapp%2Fid1530010245">OneLink without target blank</h1>
       <h1><a href="https://clovanote.onelink.me/GG6D/9cec6fee" target="_blank">OneLink without af_ios_url/with target blank</h1>  
-      <h1><a href="https://marcuskim.onelink.me/DEjJ/1aa7d0bd">OneLink of the samp app</h1>
+      <h1><a href="https://marcuskim.onelink.me/DEjJ/1aa7d0bd">OneLink of the samp app</h1> -->
     </main>
   </body>
 </html>
