--- a/smart_script/index.html
+++ b/smart_script/index.html
@@ -78,14 +78,14 @@
   </div>
   <div class="stores-wrapper">
     <a id="ios_link" href="https://apps.apple.com/us/app/my-device-id-by-appsflyer/id1192323960">
-        <img class="appstore-image" src="../images/app_store.png" alt="app store link" >
+        <img class="appstore-image" src="images/app_store.png" alt="app store link" >
     </a>
 
     <a id="andrd_link" class="appstore-image" href="https://play.google.com/store/apps/details?id=com.appsflyer.android.deviceid">
-        <img src="../images/play_store.png" alt="play store link">
+        <img src="images/play_store.png" alt="play store link">
     </a>
   </div>
-  <script type="text/javascript" src="../scripts/onelink-smart-script-v2.1.1.js"></script>
+  <script type="text/javascript" src="scripts/onelink-smart-script-v2.1.1.js"></script>
   <script src="scripts/prism.js"></script>
   <script src="scripts/prism-line-numbers.js"></script>
   <script src="scripts/prism-live.js"></script>
