--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   </head>
 
   <body>
-    <main>
-      <input type=button onClick="location.href='../onelink_test.html'" value='click here'>
-    </main>
-
+    <input type=button style="height:200px;width:400px;font-size:50px;"
+      onClick="location.href='https://marcuskim17.github.io/marcus17.github.io/onelink_test.html'" value='OneLink Test'>
+    <p> Hello world!</p>
+    <input type=button style="height:200px;width:400px;font-size:50px;"
+      onClick="location.href='https://marcuskim17.github.io/marcus17.github.io/smart_script'" value='Smart Script'>
+    <p> Hello world!</p>
+    <input type=button style="height:200px;width:400px;font-size:50px;"
+      onClick="location.href='https://marcuskim17.github.io/marcus17.github.io/smart_banner.html'" value='Smart Banner'>
   </body>
 </html>
