owwl ios onelink test

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,10 +10,11 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://daangn.onelink.me/oWdR/8acb4cba">https://daangn.onelink.me/oWdR/8acb4cba</h1>
+      <h1><a href="https://owwl.onelink.me/mqNT/mdtihj9p?page=owwl_auto_invest">https://owwl.onelink.me/mqNT/mdtihj9p?page=owwl_auto_invest</h1>
+      <!-- <h1><a href="https://daangn.onelink.me/oWdR/8acb4cba">https://daangn.onelink.me/oWdR/8acb4cba</h1>
       <h1><a href="https://apps.apple.com/kr/app/id1471091493">App Store Link</h1>  
       <h1><a href="https://manhwakyung.onelink.me/Te4S/testpage" target="_blank">https://manhwakyung.onelink.me/Te4S/testpage</h1>
-      <h1><a href="https://marcuskim.onelink.me/DEjJ/1aa7d0bd">OneLink of the Android sample app</h1>
+      <h1><a href="https://marcuskim.onelink.me/DEjJ/1aa7d0bd">OneLink of the Android sample app</h1> -->
     </main>
 </body>
 
