--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,8 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://owwl.onelink.me/mqNT/mdtihj9p?page=owwl_auto_invest">https://owwl.onelink.me/mqNT/mdtihj9p?page=owwl_auto_invest</h1>
+      <h1><a href="https://neosmtsrenewal.onelink.me/dRRD/pi7jtiek">https://neosmtsrenewal.onelink.me/dRRD/pi7jtiek</h1>  
+      <!-- <h1><a href="https://owwl.onelink.me/mqNT/mdtihj9p?page=owwl_auto_invest">https://owwl.onelink.me/mqNT/mdtihj9p?page=owwl_auto_invest</h1> -->
       <!-- <h1><a href="https://daangn.onelink.me/oWdR/8acb4cba">https://daangn.onelink.me/oWdR/8acb4cba</h1>
       <h1><a href="https://apps.apple.com/kr/app/id1471091493">App Store Link</h1>  
       <h1><a href="https://manhwakyung.onelink.me/Te4S/testpage" target="_blank">https://manhwakyung.onelink.me/Te4S/testpage</h1>
