Added promota onelink test link

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,8 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://neosmtsrenewal.onelink.me/dRRD/pi7jtiek">https://neosmtsrenewal.onelink.me/dRRD/pi7jtiek</h1>  
+      <h1><a href="https://neosmtsrenewal.onelink.me/dRRD/pi7jtiek">https://neosmtsrenewal.onelink.me/dRRD/pi7jtiek</h1>
+      <h1><a href="https://promota.onelink.me/BI7s?pid=SpecialDA&af_web_dp=https%3A%2F%2Fwww.must-ad.com&c=Service_Total&is_retargeting=true&af_click_lookback=7d&af_dp=mustad%3A%2F%2Fmain&af_channel=Naver_SpecialDA&af_adset=Appinstall">Promota OneLink</h1>
       <!-- <h1><a href="https://owwl.onelink.me/mqNT/mdtihj9p?page=owwl_auto_invest">https://owwl.onelink.me/mqNT/mdtihj9p?page=owwl_auto_invest</h1> -->
       <!-- <h1><a href="https://daangn.onelink.me/oWdR/8acb4cba">https://daangn.onelink.me/oWdR/8acb4cba</h1>
       <h1><a href="https://apps.apple.com/kr/app/id1471091493">App Store Link</h1>  
