--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,18 +10,8 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
+      <h1><a href="https://gabtraining.onelink.me/xfPm/withfallback">https://gabtraining.onelink.me/xfPm/withfallback</h1>
       <h1><a href="https://grab.onelink.me/2695613898/CAOCAP3">https://grab.onelink.me/2695613898/CAOCAP3</h1>
-      <h1><a href="https://enrichapplinks.onelink.me/1c2W">https://enrichapplinks.onelink.me/1c2W</h1>
-        
-      <!-- <h1><a href="https://neosmtsrenewal.onelink.me/dRRD/pi7jtiek">https://neosmtsrenewal.onelink.me/dRRD/pi7jtiek</h1>
-      <h1><a href="https://neosmtsrenewal.onelink.me/dRRD?pid=NAVER&c=2207_BD_Renewal&af_web_dp=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fpc%2Ftab_00%2Findex.html&af_ios_url=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fmo%2Ftab_00%2Findex.html&af_android_url=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fmo%2Ftab_00%2Findex.html">https://neosmtsrenewal.onelink.me/dRRD?pid=NAVER&c=2207_BD_Renewal&af_web_dp=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fpc%2Ftab_00%2Findex.html&af_ios_url=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fmo%2Ftab_00%2Findex.html&af_android_url=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fmo%2Ftab_00%2Findex.html</h1>
-      <h1><a href="https://neosmtsrenewal.onelink.me/dRRD?pid=NAVER&c=2207_BD_Renewal&af_dp=neosmartaf%3A%2F%2F&af_web_dp=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fpc%2Ftab_00%2Findex.html&af_ios_url=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fmo%2Ftab_00%2Findex.html&af_android_url=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fmo%2Ftab_00%2Findex.html">https://neosmtsrenewal.onelink.me/dRRD?pid=NAVER&c=2207_BD_Renewal&af_dp=neosmartaf%3A%2F%2F&af_web_dp=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fpc%2Ftab_00%2Findex.html&af_ios_url=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fmo%2Ftab_00%2Findex.html&af_android_url=https%3A%2F%2Fkoreainvestment-event.com%2Febiz%2Fmo%2Ftab_00%2Findex.html</h1>  
-      <h1><a href="https://tving.onelink.me/xHqC/9t2bwfo3?utm_source=naver_brandsearch_m&utm_medium=cpq&utm_campaign=alchemyofsouls_bm&utm_content=%EB%A9%94%EC%9D%B8%ED%85%8D%EC%8A%A4%ED%8A%B8&utm_term=220618">https://tving.onelink.me/xHqC/9t2bwfo3?utm_source=naver_brandsearch_m&utm_medium=cpq&utm_campaign=alchemyofsouls_bm&utm_content=%EB%A9%94%EC%9D%B8%ED%85%8D%EC%8A%A4%ED%8A%B8&utm_term=220618</h1> -->
-      <!-- <h1><a href="https://owwl.onelink.me/mqNT/mdtihj9p?page=owwl_auto_invest">https://owwl.onelink.me/mqNT/mdtihj9p?page=owwl_auto_invest</h1> -->
-      <!-- <h1><a href="https://daangn.onelink.me/oWdR/8acb4cba">https://daangn.onelink.me/oWdR/8acb4cba</h1>
-      <h1><a href="https://apps.apple.com/kr/app/id1471091493">App Store Link</h1>  
-      <h1><a href="https://manhwakyung.onelink.me/Te4S/testpage" target="_blank">https://manhwakyung.onelink.me/Te4S/testpage</h1>
-      <h1><a href="https://marcuskim.onelink.me/DEjJ/1aa7d0bd">OneLink of the Android sample app</h1> -->
     </main>
 </body>
 
