added iap test page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <body>
     <input type=button style="height:200px;width:400px;font-size:50px;"
+      onClick="location.href='https://marcuskim17.github.io/marcus17.github.io/inapp_event.html'" value='IAP Test'>
+    <p> Hello world!</p>
+    <input type=button style="height:200px;width:400px;font-size:50px;"
       onClick="location.href='https://marcuskim17.github.io/marcus17.github.io/onelink_test.html'" value='OneLink Test'>
     <p> Hello world!</p>
     <input type=button style="height:200px;width:400px;font-size:50px;"
