--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,8 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://gabtraining.onelink.me/xfPm/withfallback">https://gabtraining.onelink.me/xfPm/withfallback</h1>
-      <h1><a href="https://grab.onelink.me/2695613898/CAOCAP3">https://grab.onelink.me/2695613898/CAOCAP3</h1>
+      <h1><a href="https://zigbang.onelink.me/6RlM?pid=naver&c=sa_mo_apt&af_channel=sa&af_adset=sa&af_ad={keyword}&af_keywords={keyword}&af_sub1=nru&af_sub2=apt&is_retargeting=true&af_dp=zigbang%3A%2F%2Fapp%2Fmain%3Fd%3Dapt&af_force_deeplink=true&af_sub3={ad}&af_sub4=onelink&af_sub5={rank}&af_prt=erudamarketing">Zigbang OneLink</h1>
     </main>
 </body>
 
