--- a/hanssem.html
+++ b/hanssem.html
@@ -32,7 +32,7 @@
     } else {
       setTimeout(waitGetCurrentPosition, WAIT_TIME);
     }
-  }
+ }
 
   function waitWatchPosition() {
     if ((typeof hookedObj.fakeGeo !== 'undefined')) {
@@ -307,21 +307,7 @@
 <!-- 20200609 와이즈로그 신규 스크립트 시작 -->
 <!-- 20200609 와이즈로그 신규 스크립트 끝 -->
 
-<!-- Google Analytics -->
-<meta name="google-site-verification" content="QSLLjT8VUk6LKPbS_5AkP8yOXnb33SLwD3uKMScpOaQ">
-
-<script>
-var gaCode = 'UA-70603704-2';
-if (deviceChannel == 'MOAPP' || navigator.userAgent.indexOf("HSApp")!=-1) {
-    gaCode = 'UA-70603704-4';
-}
-
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', gaCode, 'auto');
-</script><!-- chrome(크롬) 정책 변경에 따른 referrer(레퍼러) 삭제되는 현상 수정 2021.02.26 신호섭 (MALLDVLPRJ-1244) -->
+<!-- chrome(크롬) 정책 변경에 따른 referrer(레퍼러) 삭제되는 현상 수정 2021.02.26 신호섭 (MALLDVLPRJ-1244) -->
 <meta name="referrer" content="always">
 <script type="text/javascript" src="./hanssem_files/ui.page.main.js"></script>
 		<script type="text/javascript" src="./hanssem_files/disp.common.js"></script><!-- 모바일 전시 컴포넌트 관련 스크립트 모음 -->
