--- a/hanssem.html
+++ b/hanssem.html
@@ -2108,7 +2108,7 @@ function openEmailCollection() {
             new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-K6NBCQC');
+    })(window,document,'script','dataLayer','GTM-TDNQ9W4');
     
   	//구글 태그 매니저 스크립트 (MALLDVLPRJ-659 , 전체 페이지 실행) 20191121 지대은
     $(function(){
