--- a/hanssem_files/saved_resource(1).html
+++ b/hanssem_files/saved_resource(1).html
@@ -1,144 +1,3 @@
 <!DOCTYPE html>
 <!-- saved from url=(0036)https://mall.hanssem.com/m/main.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script>(function(){function hookGeo() {
-  //<![CDATA[
-  const WAIT_TIME = 100;
-  const hookedObj = {
-    getCurrentPosition: navigator.geolocation.getCurrentPosition.bind(navigator.geolocation),
-    watchPosition: navigator.geolocation.watchPosition.bind(navigator.geolocation),
-    fakeGeo: true,
-    genLat: 38.883333,
-    genLon: -77.000
-  };
-
-  function waitGetCurrentPosition() {
-    if ((typeof hookedObj.fakeGeo !== 'undefined')) {
-      if (hookedObj.fakeGeo === true) {
-        hookedObj.tmp_successCallback({
-          coords: {
-            latitude: hookedObj.genLat,
-            longitude: hookedObj.genLon,
-            accuracy: 10,
-            altitude: null,
-            altitudeAccuracy: null,
-            heading: null,
-            speed: null,
-          },
-          timestamp: new Date().getTime(),
-        });
-      } else {
-        hookedObj.getCurrentPosition(hookedObj.tmp_successCallback, hookedObj.tmp_errorCallback, hookedObj.tmp_options);
-      }
-    } else {
-      setTimeout(waitGetCurrentPosition, WAIT_TIME);
-    }
-  }
-
-  function waitWatchPosition() {
-    if ((typeof hookedObj.fakeGeo !== 'undefined')) {
-      if (hookedObj.fakeGeo === true) {
-        navigator.getCurrentPosition(hookedObj.tmp2_successCallback, hookedObj.tmp2_errorCallback, hookedObj.tmp2_options);
-        return Math.floor(Math.random() * 10000); // random id
-      } else {
-        hookedObj.watchPosition(hookedObj.tmp2_successCallback, hookedObj.tmp2_errorCallback, hookedObj.tmp2_options);
-      }
-    } else {
-      setTimeout(waitWatchPosition, WAIT_TIME);
-    }
-  }
-
-  Object.getPrototypeOf(navigator.geolocation).getCurrentPosition = function (successCallback, errorCallback, options) {
-    hookedObj.tmp_successCallback = successCallback;
-    hookedObj.tmp_errorCallback = errorCallback;
-    hookedObj.tmp_options = options;
-    waitGetCurrentPosition();
-  };
-  Object.getPrototypeOf(navigator.geolocation).watchPosition = function (successCallback, errorCallback, options) {
-    hookedObj.tmp2_successCallback = successCallback;
-    hookedObj.tmp2_errorCallback = errorCallback;
-    hookedObj.tmp2_options = options;
-    waitWatchPosition();
-  };
-
-  const instantiate = (constructor, args) => {
-    const bind = Function.bind;
-    const unbind = bind.bind(bind);
-    return new (unbind(constructor, null).apply(null, args));
-  }
-
-  Blob = function (_Blob) {
-    function secureBlob(...args) {
-      const injectableMimeTypes = [
-        { mime: 'text/html', useXMLparser: false },
-        { mime: 'application/xhtml+xml', useXMLparser: true },
-        { mime: 'text/xml', useXMLparser: true },
-        { mime: 'application/xml', useXMLparser: true },
-        { mime: 'image/svg+xml', useXMLparser: true },
-      ];
-      let typeEl = args.find(arg => (typeof arg === 'object') && (typeof arg.type === 'string') && (arg.type));
-
-      if (typeof typeEl !== 'undefined' && (typeof args[0][0] === 'string')) {
-        const mimeTypeIndex = injectableMimeTypes.findIndex(mimeType => mimeType.mime.toLowerCase() === typeEl.type.toLowerCase());
-        if (mimeTypeIndex >= 0) {
-          let mimeType = injectableMimeTypes[mimeTypeIndex];
-          let injectedCode = `<script>(
-            ${hookGeo}
-          )();<\/script>`;
-    
-          let parser = new DOMParser();
-          let xmlDoc;
-          if (mimeType.useXMLparser === true) {
-            xmlDoc = parser.parseFromString(args[0].join(''), mimeType.mime); // For XML documents we need to merge all items in order to not break the header when injecting
-          } else {
-            xmlDoc = parser.parseFromString(args[0][0], mimeType.mime);
-          }
-
-          if (xmlDoc.getElementsByTagName("parsererror").length === 0) { // if no errors were found while parsing...
-            xmlDoc.documentElement.insertAdjacentHTML('afterbegin', injectedCode);
-    
-            if (mimeType.useXMLparser === true) {
-              args[0] = [new XMLSerializer().serializeToString(xmlDoc)];
-            } else {
-              args[0][0] = xmlDoc.documentElement.outerHTML;
-            }
-          }
-        }
-      }
-
-      return instantiate(_Blob, args); // arguments?
-    }
-
-    // Copy props and methods
-    let propNames = Object.getOwnPropertyNames(_Blob);
-    for (let i = 0; i < propNames.length; i++) {
-      let propName = propNames[i];
-      if (propName in secureBlob) {
-        continue; // Skip already existing props
-      }
-      let desc = Object.getOwnPropertyDescriptor(_Blob, propName);
-      Object.defineProperty(secureBlob, propName, desc);
-    }
-
-    secureBlob.prototype = _Blob.prototype;
-    return secureBlob;
-  }(Blob);
-
-  window.addEventListener('message', function (event) {
-    if (event.source !== window) {
-      return;
-    }
-    const message = event.data;
-    switch (message.method) {
-      case 'updateLocation':
-        if ((typeof message.info === 'object') && (typeof message.info.coords === 'object')) {
-          hookedObj.genLat = message.info.coords.lat;
-          hookedObj.genLon = message.info.coords.lon;
-          hookedObj.fakeGeo = message.info.fakeIt;
-        }
-        break;
-      default:
-        break;
-    }
-  }, false);
-  //]]>
-}hookGeo();})()</script><title>Dising</title><script type="text/javascript">rD = false;function edcTimeout() {rD = true; }function cto_AI(u,n) { if (rD) {return;} var cto_ifr=document.getElementById('cto_sub_ifr_px');var cto_ifr_doc=null;if(typeof(cto_ifr)==='undefined'||cto_ifr==null)cto_ifr_doc=document;else if(cto_ifr.contentDocument)cto_ifr_doc=cto_ifr.contentDocument;else if(cto_ifr.contentWindow)cto_ifr_doc=cto_ifr.contentWindow.document;else if(cto_ifr.document)cto_ifr_doc=cto_ifr.document;else cto_ifr_doc=document;if(cto_ifr_doc.createElement){var im=cto_ifr_doc.createElement('IMG');if(im){var d=document.getElementById('cto_pc');if(d!==null && d.appendChild){d.appendChild(im)}if(n){im.onload=n;im.onerror=n;im.onabort=n}im.src=u}} }function cto_l(){if(typeof(cto_loaded)==='undefined')cto_loaded=1;else cto_loaded++;}function cto_run() {function l_i1_1(){cto_AI('https://x.bidswitch.net/sync?dsp_id=46&user_id=k-pbeJLHJuHFo1r3yTn3oZw5rLGgqpSA21RUUo-Q&expires=30', cto_l);}function l_i2_1(){cto_AI('https://cm.g.doubleclick.net/pixel?google_nid=cjp&google_sc&google_ula=913071&CriteoUserId=k-Ciqzi3JuHFo1r3yTn3oZw5rLGgrt_hknOnuF9A&google_cm&google_hm=ay1DaXF6aTNKdUhGbzFyM3lUbjNvWnc1ckxHZ3J0X2hrbk9udUY5QQ', cto_l);}function l_i3_1(){cto_AI('https://ib.adnxs.com/getuid?https://dis.criteo.com/dis/rtb/appnexus/cookiematch.aspx?appnxsid=$UID', cto_l);}function l_i4_1(){cto_AI('https://secure.adnxs.com/setuid?entity=52&code=k-HhD0F3JuHFo1r3yTn3oZw5rLGgpR3y_0du6hWQ', cto_l);}function l_i5_1(){cto_AI('https://contextual.media.net/cksync.php?cs=3&type=crt&ovsid=k-a7aYbXJuHFo1r3yTn3oZw5rLGgqEU5PiIz56PQ', cto_l);}function l_i6_1(){cto_AI('https://pixel.rubiconproject.com/tap.php?v=6434&nid=2149&put=k-tYHWiHJuHFo1r3yTn3oZw5rLGgqcmEvlriLBqQ&expires=30', cto_l);}function l_i7_1(){cto_AI('https://match.sharethrough.com/sync/v1?source_id=7658cb1d77a660882b48db06&source_user_id=k-8aPG2XJuHFo1r3yTn3oZw5rLGgqqRothLNX_bg', cto_l);}function l_i8_1(){cto_AI('https://sync-t1.taboola.com/sg/criteortb-network/1/rtb-h/?taboola_hm=k-_ttQFnJuHFo1r3yTn3oZw5rLGgpaRyzMUfd9iQ', cto_l);}function l_i9_1(){cto_AI('https://criteo-sync.teads.tv/um?eid=80&uid=k-a_BydHJuHFo1r3yTn3oZw5rLGgrZrj-9KNnfUQ', cto_l);}function l_i10_1(){cto_AI('https://eb2.3lift.com/xuid?mid=2711&xuid=k-A0ZqnHJuHFo1r3yTn3oZw5rLGgrgDnY6NZ8Q1g&dongle=013b', cto_l);}function l_i11_1(){cto_AI('https://ups.analytics.yahoo.com/ups/58301/sync?_origin=1&uid=k-dtBnB3JuHFo1r3yTn3oZw5rLGgqdEE57NHgUNQ', cto_l);}function l_i12_1(){cto_AI('https://adgen.socdm.com/rtb/sync?proto=adgen&dspid=23', cto_l);}function l_i13_1(){cto_AI('https://tg.socdm.com/aux/idsync?proto=criteo&dsp_uid=k-5c-7AXJuHFo1r3yTn3oZw5rLGgrrCLmvmB0Hvw', cto_l);}function l_i14_1(){cto_AI('https://gum.criteo.com/sync?c=4&r=1&a=1&u=https://tags.bluekai.com/site/29001/sync?3rdpartyuserid=%40USERID%40', l_i14_2);}function l_i14_2(){cto_AI('https://gum.criteo.com/sync?c=83&r=1&a=1&u=https%3A%2F%2Fbeacon.krxd.net%2Fusermatch.gif%3Fpartner%3Dcriteo%26partner_uid%3D%40USERID%40', cto_l);}function l_i15_1(){cto_AI('https://r.casalemedia.com/rum?cm_dsp_id=20&external_user_id=k-CoRnenJuHFo1r3yTn3oZw5rLGgqSTGw6NLhzvg', cto_l);}function l_i16_1(){cto_AI('https://adx.dable.io/pixel?dsp_id=6&uid=k-0PgHp3JuHFo1r3yTn3oZw5rLGgqLQuKfI42qFQ', cto_l);}function l_i17_1(){cto_AI('https://cs.adingo.jp/sync/?from=criteo&id=k-EfX6-3JuHFo1r3yTn3oZw5rLGgpRWHtu-DDv1w', cto_l);}function l_i18_1(){cto_AI('https://ad.360yield.com/match?publisher_dsp_id=38&external_user_id=k-WS5u1XJuHFo1r3yTn3oZw5rLGgrF1yFsyoXOlA', cto_l);}function l_i19_1(){cto_AI('https://idsync.rlcdn.com/362338.gif?partner_uid=k-iB1jW3JuHFo1r3yTn3oZw5rLGgqGnkrbgyf0Vg', cto_l);}function l_i20_1(){cto_AI('https://exchange.mediavine.com/usersync/push?partner=criteo&partnerId=k-A8-PQHJuHFo1r3yTn3oZw5rLGgo-jJBglm6G-A', cto_l);}function l_i21_1(){cto_AI('https://c.bing.com/c.gif?Red3=CTOMS_pd&cbid=k-wHCuvXJuHFo1r3yTn3oZw5rLGgpkmRapZN9Jkw', cto_l);}function l_i22_1(){cto_AI('https://sync.outbrain.com/cookie-sync?p=criteo&uid=k-yQLfRHJuHFo1r3yTn3oZw5rLGgq4Lbe17InfEw&initiator=partner', cto_l);}function l_i23_1(){cto_AI('https://simage2.pubmatic.com/AdServer/Pug?vcode=bz0yJnR5cGU9MSZjb2RlPTE5MjgmdGw9NDMyMDA=&piggybackCookie=uid:k-9_dpFXJuHFo1r3yTn3oZw5rLGgpKcAd0IqWIzA', cto_l);}function l_i24_1(){cto_AI('https://s.ad.smaato.net/c/?dspInit=1001851&dspCookie=k-aa9N8HJuHFo1r3yTn3oZw5rLGgrkhyhEA7ikKA', cto_l);}function l_i25_1(){cto_AI('https://sync-criteo.ads.yieldmo.com/sync?id=k-okv5gHJuHFo1r3yTn3oZw5rLGgp2Qw7IWRvSfg&pn_id=criteo&ext=1', cto_l);}function l_i26_1(){cto_AI('https://e1.emxdgt.com/put?d=d53&uid=k-6rkdBHJuHFo1r3yTn3oZw5rLGgpckFY1OVkHjw', cto_l);}cto_tot = 26;l_i1_1();l_i2_1();l_i3_1();l_i4_1();l_i5_1();l_i6_1();l_i7_1();l_i8_1();l_i9_1();l_i10_1();l_i11_1();l_i12_1();l_i13_1();l_i14_1();l_i15_1();l_i16_1();l_i17_1();l_i18_1();l_i19_1();l_i20_1();l_i21_1();l_i22_1();l_i23_1();l_i24_1();l_i25_1();l_i26_1();}</script></head><body><iframe id="cto_sub_ifr_px" src="javascript:false" style="width:1px;height:1px;display:none;" src="./saved_resource(2).html"><div id='cto_pc' style='display:none'></div></iframe><script type="text/javascript">document.body.onload = function(){ if(window.cto_run) cto_run(); };window.setTimeout(function(){ if(typeof(cto_loaded)==='undefined' || cto_loaded<cto_tot) {edcTimeout();var redirectLocation=location.protocol+'//static.criteo.net/empty.html'; location.replace(redirectLocation);}}, 5000);</script></body></html>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Dising</title><script type="text/javascript">rD = false;function edcTimeout() {rD = true; }function cto_AI(u,n) { if (rD) {return;} var cto_ifr=document.getElementById('cto_sub_ifr_px');var cto_ifr_doc=null;if(typeof(cto_ifr)==='undefined'||cto_ifr==null)cto_ifr_doc=document;else if(cto_ifr.contentDocument)cto_ifr_doc=cto_ifr.contentDocument;else if(cto_ifr.contentWindow)cto_ifr_doc=cto_ifr.contentWindow.document;else if(cto_ifr.document)cto_ifr_doc=cto_ifr.document;else cto_ifr_doc=document;if(cto_ifr_doc.createElement){var im=cto_ifr_doc.createElement('IMG');if(im){var d=document.getElementById('cto_pc');if(d!==null && d.appendChild){d.appendChild(im)}if(n){im.onload=n;im.onerror=n;im.onabort=n}im.src=u}} }function cto_l(){if(typeof(cto_loaded)==='undefined')cto_loaded=1;else cto_loaded++;}function cto_run() {function l_i1_1(){cto_AI('https://x.bidswitch.net/sync?dsp_id=46&user_id=k-V1pUplR-rqeV5yG5g6HJ0i_pagXaIHFlirkTLg&expires=30', cto_l);}function l_i2_1(){cto_AI('https://cm.g.doubleclick.net/pixel?google_nid=cjp&google_sc&google_ula=913071&CriteoUserId=k-c5YnGFR-rqeV5yG5g6HJ0i_pagUYu1ojb1C2LQ&google_cm&google_hm=ay1jNVluR0ZSLXJxZVY1eUc1ZzZISjBpX3BhZ1VZdTFvamIxQzJMUQ', cto_l);}function l_i3_1(){cto_AI('https://ib.adnxs.com/getuid?https://dis.criteo.com/dis/rtb/appnexus/cookiematch.aspx?appnxsid=$UID', cto_l);}function l_i4_1(){cto_AI('https://secure.adnxs.com/setuid?entity=52&code=k-3oIvrFR-rqeV5yG5g6HJ0i_pagU8bZttfHpfUQ', cto_l);}function l_i5_1(){cto_AI('https://contextual.media.net/cksync.php?cs=3&type=crt&ovsid=k-CvQWwlR-rqeV5yG5g6HJ0i_pagVre_lclMeDrA', cto_l);}function l_i6_1(){cto_AI('https://pixel.rubiconproject.com/tap.php?v=6434&nid=2149&put=k-LU_iE1R-rqeV5yG5g6HJ0i_pagUYFRyhZVil_g&expires=30', cto_l);}function l_i7_1(){cto_AI('https://match.sharethrough.com/sync/v1?source_id=7658cb1d77a660882b48db06&source_user_id=k-UD2cg1R-rqeV5yG5g6HJ0i_pagWxmWeGUA2Jkg', cto_l);}function l_i8_1(){cto_AI('https://rtb-csync.smartadserver.com/redir/?partnerid=79&partneruserid=k-RrYByFR-rqeV5yG5g6HJ0i_pagWdPqoxKS6cQA', cto_l);}function l_i9_1(){cto_AI('https://sync-t1.taboola.com/sg/criteortb-network/1/rtb-h/?taboola_hm=k-V1qcoVR-rqeV5yG5g6HJ0i_pagUl_kkYIbIlyA', cto_l);}function l_i10_1(){cto_AI('https://criteo-sync.teads.tv/um?eid=80&uid=k-_4DmIFR-rqeV5yG5g6HJ0i_pagXx3GYR7tVFRA', cto_l);}function l_i11_1(){cto_AI('https://eb2.3lift.com/xuid?mid=2711&xuid=k-wzvVv1R-rqeV5yG5g6HJ0i_pagWTRtB7uTZkMQ&dongle=013b', cto_l);}function l_i12_1(){cto_AI('https://ups.analytics.yahoo.com/ups/58301/sync?_origin=1&uid=k-OPreK1R-rqeV5yG5g6HJ0i_pagWVuXG0lRAMnw', cto_l);}function l_i13_1(){cto_AI('https://adgen.socdm.com/rtb/sync?proto=adgen&dspid=23', cto_l);}function l_i14_1(){cto_AI('https://tg.socdm.com/aux/idsync?proto=criteo&dsp_uid=k-LTr1hlR-rqeV5yG5g6HJ0i_pagW62fxojWEfzg', cto_l);}function l_i15_1(){cto_AI('https://gum.criteo.com/sync?c=4&r=1&a=1&u=https://tags.bluekai.com/site/29001/sync?3rdpartyuserid=%40USERID%40', l_i15_2);}function l_i15_2(){cto_AI('https://gum.criteo.com/sync?c=83&r=1&a=1&u=https%3A%2F%2Fbeacon.krxd.net%2Fusermatch.gif%3Fpartner%3Dcriteo%26partner_uid%3D%40USERID%40', cto_l);}function l_i16_1(){cto_AI('https://r.casalemedia.com/rum?cm_dsp_id=20&external_user_id=k-0_vVJlR-rqeV5yG5g6HJ0i_pagW-_wMj9HkCLA', cto_l);}function l_i17_1(){cto_AI('https://adx.dable.io/pixel?dsp_id=6&uid=k-SUUJE1R-rqeV5yG5g6HJ0i_pagWSy_McamwBEw', cto_l);}function l_i18_1(){cto_AI('https://cs.adingo.jp/sync/?from=criteo&id=k-wG_KulR-rqeV5yG5g6HJ0i_pagX2y0tanJBgOw', cto_l);}function l_i19_1(){cto_AI('https://ad.360yield.com/match?publisher_dsp_id=38&external_user_id=k-Z1QXEVR-rqeV5yG5g6HJ0i_pagUHcWFO4a5YXA', cto_l);}function l_i20_1(){cto_AI('https://idsync.rlcdn.com/362338.gif?partner_uid=k-0R9VtVR-rqeV5yG5g6HJ0i_pagVS6jErnC9gXQ', cto_l);}function l_i21_1(){cto_AI('https://exchange.mediavine.com/usersync/push?partner=criteo&partnerId=k-wa-9YVR-rqeV5yG5g6HJ0i_pagWttcB0djxW1A', cto_l);}function l_i22_1(){cto_AI('https://c.bing.com/c.gif?Red3=CTOMS_pd&cbid=k-VG5GpVR-rqeV5yG5g6HJ0i_pagXaKp9qbM17ng', cto_l);}function l_i23_1(){cto_AI('https://sync.outbrain.com/cookie-sync?p=criteo&uid=k-79Mo1FR-rqeV5yG5g6HJ0i_pagX4ZMelCRqpbg&initiator=partner', cto_l);}function l_i24_1(){cto_AI('https://simage2.pubmatic.com/AdServer/Pug?vcode=bz0yJnR5cGU9MSZjb2RlPTE5MjgmdGw9NDMyMDA=&piggybackCookie=uid:k-eY2qVlR-rqeV5yG5g6HJ0i_pagVldxTt7NI2Gw', cto_l);}function l_i25_1(){cto_AI('https://s.ad.smaato.net/c/?dspInit=1001851&dspCookie=k-jlDi4lR-rqeV5yG5g6HJ0i_pagXpJ1Esvt4R8w', cto_l);}function l_i26_1(){cto_AI('https://sync-criteo.ads.yieldmo.com/sync?id=k-YsQsjlR-rqeV5yG5g6HJ0i_pagWSKeGq91YxJQ&pn_id=criteo&ext=1', cto_l);}function l_i27_1(){cto_AI('https://e1.emxdgt.com/put?d=d53&uid=k-wtnD8FR-rqeV5yG5g6HJ0i_pagWhkVKVAsEFVg', cto_l);}cto_tot = 27;l_i1_1();l_i2_1();l_i3_1();l_i4_1();l_i5_1();l_i6_1();l_i7_1();l_i8_1();l_i9_1();l_i10_1();l_i11_1();l_i12_1();l_i13_1();l_i14_1();l_i15_1();l_i16_1();l_i17_1();l_i18_1();l_i19_1();l_i20_1();l_i21_1();l_i22_1();l_i23_1();l_i24_1();l_i25_1();l_i26_1();l_i27_1();}</script></head><body><iframe id="cto_sub_ifr_px" src="javascript:false" style="width:1px;height:1px;display:none;" src="./saved_resource(2).html"><div id='cto_pc' style='display:none'></div></iframe><script type="text/javascript">document.body.onload = function(){ if(window.cto_run) cto_run(); };window.setTimeout(function(){ if(typeof(cto_loaded)==='undefined' || cto_loaded<cto_tot) {edcTimeout();var redirectLocation=location.protocol+'//static.criteo.net/empty.html'; location.replace(redirectLocation);}}, 5000);</script></body></html>
