clean hs_test html page

--- a/hs_test.html
+++ b/hs_test.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
-<!-- saved from url=(0036)https://mall.hanssem.com/m/main.html -->
 <html lang="ko" class="has-modal">
-	<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,shrink-to-fit=no,viewport-fit=cover">
-		<meta name="format-detection" content="telephone=no">
-		<meta name="apple-mobile-web-app-title" content="HANSSEM">
-		<meta name="keywords" content="한샘,한샘몰,hanssem,hanssemmall,가구,생활용품,인테리어,신혼,이사,디자인,홈케어,쇼핑몰">
-		<meta name="description" content="토탈 홈 인테리어 쇼핑몰, 한샘몰 쉽고 편리한 온라인 쇼핑, 안방까지 찾아가는 한샘만의 올인원 서비스, 한샘몰만의 특별한 가격혜택 및 콘텐츠/서비스를 제공합니다.">
-		<meta property="og:title" content="한샘몰 - 토탈 홈 인테리어 쇼핑몰">
-		<meta property="og:type" content="mall">
-		<meta property="og:url" content="https://mall.hanssem.com/m/main.do">
-		<meta property="og:description" content="토탈 홈 인테리어 쇼핑몰, 한샘몰 쉽고 편리한 온라인 쇼핑, 안방까지 찾아가는 한샘만의 올인원 서비스, 한샘몰만의 특별한 가격혜택 및 콘텐츠/서비스를 제공합니다.">
-		<meta property="og:image" content="https://mall.hanssem.com/resources/images/common/logo_hs.gif">
-		<meta property="og:site_name" content="hanssem">
-		<title>한샘몰 | 한샘몰</title>
-		<link rel="shortcut icon" href="https://image.hanssem.com/img/common/favicon.ico">
-
-		<!-- Google Tag Manager -->
+    <html lang="ko" class="has-modal">
+        <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,shrink-to-fit=no,viewport-fit=cover">
+            <title>AppsFlyer Smart Script test page (GTM)</title>
+    
+	<!-- Google Tag Manager -->
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 			})(window,document,'script','dataLayer','GTM-TDNQ9W4');</script>
-		<!-- End Google Tag Manager -->
+	<!-- End Google Tag Manager -->
     </head>
 	
 	<body class="app-V3" onload="" style="margin-top: 0px;">
@@ -33,6 +21,5 @@
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TDNQ9W4"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->
-	
 	</body>
 </html>
