added goodchoice onelink

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://tworld.onelink.me/cwDV/dadwix1a">https://tworld.onelink.me/cwDV/dadwix1a</h1>
+      <h1><a href="https://goodchoice.onelink.me/C4wC/3p8bmt2v">https://goodchoice.onelink.me/C4wC/3p8bmt2v</h1>
     </main>
 </body>
 
