--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://goodchoice.onelink.me/C4wC/3p8bmt2v">https://goodchoice.onelink.me/C4wC/3p8bmt2v</h1>
+      <h1><a href="https://celebshop.onelink.me/jZE0/s67cll9g">https://celebshop.onelink.me/jZE0/s67cll9gss</h1>
     </main>
 </body>
 
