--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://celebshop.onelink.me/jZE0/s67cll9g">https://celebshop.onelink.me/jZE0/s67cll9gss</h1>
+      <h1><a href="https://zigzag.onelink.me/O1G1?af_ios_url=https://zigzag.kr/?utm_source=sa_naver_mo&utm_campaign=home&utm_medium=%ec%a7%80%ea%b7%b8%ec%9e%ac%ea%b7%b8%ea%b5%ac%eb%a7%a4%ed%95%98%ea%b8%b0&af_android_url=https://zigzag.kr/?utm_source=sa_naver_mo&utm_campaign=home&utm_medium=%ec%a7%80%ea%b7%b8%ec%9e%ac%ea%b7%b8%ea%b5%ac%eb%a7%a4%ed%95%98%ea%b8%b0&pid=sa_naver_mo&c=%ed%8c%8c%ec%9b%8c%eb%a7%81%ed%81%ac_test&af_adset=test_%ec%8b%a0%ea%b7%9c%eb%8f%84%eb%a9%94%ec%9d%b8&af_ad=%ec%a7%80%ea%b7%b8%ec%9e%ac%ea%b7%b8%ea%b5%ac%eb%a7%a4%ed%95%98%ea%b8%b0&af_click_lookback=1d&is_retargeting=TRUE&af_xp=custom&af_dp=zigzag://&af_force_deeplink=TRUE&af_reengagement_window=7d">Zigzag OneLink</h1>
     </main>
 </body>
 
