--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,8 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://zigzag.onelink.me/O1G1?af_ios_url=https%3A%2F%2Fzigzag.kr%2F%3Futm_source%3Dsa_naver_mo%26utm_campaign%3Dhome%26utm_medium%3D%25ec%25a7%2580%25ea%25b7%25b8%25ec%259e%25ac%25ea%25b7%25b8%25ea%25b5%25ac%25eb%25a7%25a4%25ed%2595%2598%25ea%25b8%25b0&af_android_url=https%3A%2F%2Fzigzag.kr%2F%3Futm_source%3Dsa_naver_mo%26utm_campaign%3Dhome%26utm_medium%3D%EC%A7%80%EA%B7%B8%EC%9E%AC%EA%B7%B8%EA%B5%AC%EB%A7%A4%ED%95%98%EA%B8%B0&pid=sa_naver_mo&c=%ed%8c%8c%ec%9b%8c%eb%a7%81%ed%81%ac_test&af_adset=test_%ec%8b%a0%ea%b7%9c%eb%8f%84%eb%a9%94%ec%9d%b8&af_ad=%ec%a7%80%ea%b7%b8%ec%9e%ac%ea%b7%b8%ea%b5%ac%eb%a7%a4%ed%95%98%ea%b8%b0&af_click_lookback=1d&is_retargeting=true&af_xp=custom&af_dp=zigzag%3A%2F%2F&af_force_deeplink=true&af_reengagement_window=7d">Zigzag OneLink</h1>
+      <h1><a href="https://msudda-app.onelink.me/xwng/km01b10k">https://msudda-app.onelink.me/xwng/km01b10k</h1>
+      <h1><a href="https://qpoker.onelink.me/Gphh/l746yiri">https://qpoker.onelink.me/Gphh/l746yiri</h1>
     </main>
 </body>
 
