--- a/onelink_test.html
+++ b/onelink_test.html
@@ -11,7 +11,11 @@
     <main>
       <h1><a href="https://www.google.com">Google</h1>
       <h1><a href="https://msudda-app.onelink.me/xwng/km01b10k">https://msudda-app.onelink.me/xwng/km01b10k</h1>
+      <h1><a href="https://msudda-app.onelink.me/xwng?pid=Social_youtube&c=mSudda_Social_youtube&af_xp=social">https://msudda-app.onelink.me/xwng?pid=Social_youtube&c=mSudda_Social_youtube&af_xp=social</h1>
+      <h1><a href="https://msudda-app.onelink.me/xwng?pid=Social_youtube&c=mSudda_Social_youtube&af_xp=social&af_dp=msudda%3A%2F%2F">https://msudda-app.onelink.me/xwng?pid=Social_youtube&c=mSudda_Social_youtube&af_xp=social&af_dp=msudda%3A%2F%2F</h1>  
       <h1><a href="https://qpoker.onelink.me/Gphh/l746yiri">https://qpoker.onelink.me/Gphh/l746yiri</h1>
+      <h1><a href="https://qpoker.onelink.me/Gphh?pid=Social_youtube&c=qpoker_Social_youtube&af_xp=social">https://qpoker.onelink.me/Gphh?pid=Social_youtube&c=qpoker_Social_youtube&af_xp=social</h1>  
+      <h1><a href="https://qpoker.onelink.me/Gphh?pid=Social_youtube&c=qpoker_Social_youtube&af_xp=social&af_dp=qpoker%3A%2F%2F">https://qpoker.onelink.me/Gphh?pid=Social_youtube&c=qpoker_Social_youtube&af_xp=social&af_dp=qpoker%3A%2F%2F</h1>  
     </main>
 </body>
 
