--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,8 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://my-adot.onelink.me/MAbS/lwn4ahrw">https://my-adot.onelink.me/MAbS/lwn4ahrw</h1>
-      <h1><a href="https://my-adot.onelink.me/MAbS?af_xp=custom&pid=%EB%82%B4%EB%B6%80&c=T%EC%9B%94%EB%93%9C&af_adset=%EB%A9%94%EC%9D%B8&af_ad=%EC%BD%98%ED%81%90%EB%B8%8C%EB%A3%B0%EB%A0%9B%EC%9D%B4%EB%B2%A4%ED%8A%B8&is_retargeting=true&deep_link_value=skt.adot://common_web?url_path=/apollo/settings/event-read.html%26id=114&title=%EC%9D%B4%EB%B2%A4%ED%8A%B8&enable_cookies=Y&deep_link_sub1=skt.adot%3A%2F%2Fcommon_web%3Furl_path%3D%2Fapollo%2Fsettings%2Fevent-read.html%3Fid%3D114%26title%3D%25EC%259D%25B4%25EB%25B2%25A4%25ED%258A%25B8%26enable_cookies%3DY&af_dp=skt.adot://common_web?url_path=/apollo/settings/event-read.html%26id=114&title=%EC%9D%B4%EB%B2%A4%ED%8A%B8&enable_cookies=Y&af_force_deeplink=true">Adjusted OneLink</h1>
+      <h1><a href="https://engagements.appsflyer.com/v1.0/c2s/click/app/nativepc/99899899898?af_media_source=marcus_test&af_campaign=marcus_campaign_test&af_campaign_id=1234567890&af_ad=marcus_0807_ad_test&af_adset=marcus_adset_august&af_r=https%3A%2F%2Fwww.google.com">https://engagements.appsflyer.com/v1.0/c2s/click/app/nativepc/99899899898?af_media_source=marcus_test&af_campaign=marcus_campaign_test&af_campaign_id=1234567890&af_ad=marcus_0807_ad_test&af_adset=marcus_adset_august&af_r=https%3A%2F%2Fwww.google.com</h1>
     </main>
 </body>
 
