--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://engagements.appsflyer.com/v1.0/c2s/click/app/nativepc/99899899898?af_media_source=marcus_test_without_os&af_campaign=marcus_campaign_test&af_campaign_id=1234567890&af_ad=marcus_0807_ad_test&af_adset=marcus_adset_august&af_r=https%3A%2F%2Fwww.google.com">https://engagements.appsflyer.com/v1.0/c2s/click/app/nativepc/99899899898?af_media_source=marcus_test_without_os&af_campaign=marcus_campaign_test&af_campaign_id=1234567890&af_ad=marcus_0807_ad_test&af_adset=marcus_adset_august&af_r=https%3A%2F%2Fwww.google.com</h1>
+      <h1><a href="https://snow.onelink.me/4056789859/yk6vur2p">https://snow.onelink.me/4056789859/yk6vur2p</h1>
     </main>
 </body>
 
