snow uri scheme

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://snow.onelink.me/4056789859/yk6vur2p">https://snow.onelink.me/4056789859/yk6vur2p</h1>
+      <h1><a href="snowme://">snowme://</h1>
     </main>
 </body>
 
