snow uri scheme

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,9 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="snowme://">snowme://</h1>
+      <h1><a href="snowme://pick?tab=remove&mediatype=photo?from=marketing">snowme://pick?tab=remove&mediatype=photo?from=marketing</h1>
+      <h1><a href="https://socar-mkt.socar.kr/socartangwei">https://socar-mkt.socar.kr/socartangwei</h1>
+
     </main>
 </body>
 
