witchery link test

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,9 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="snowme://pick?tab=remove&mediatype=photo?from=marketing">snowme://pick?tab=remove&mediatype=photo?from=marketing</h1>
-      <h1><a href="https://socar-mkt.socar.kr/socartangwei">https://socar-mkt.socar.kr/socartangwei</h1>
-
+      <h1><a href="https://click.e.witchery.com.au/?qs=a0388c5fdcbaf8861f9e5ae6a6338234287def85ccb5d2161726e1dcf96732f87be989781ae1651f60c7eb5fc30e294b8b5e4c36a17b8058fc9bd2dc06d1c5e4">Witchery link</h1>
     </main>
 </body>
 
