--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://poker.hangame.com/index.nhn?ad=y&utm_campaign=service&utm_source=test_1010 ">https://poker.hangame.com/index.nhn?ad=y&utm_campaign=service&utm_source=test_1010</h1>
+      <h1><a href="https://my-adot.onelink.me/MAbS/gp5w6dig">https://my-adot.onelink.me/MAbS/gp5w6dig</h1>
     </main>
 </body>
 
