changed the logic

--- a/adot.html
+++ b/adot.html
@@ -55,13 +55,9 @@
             let day = current.getDate();
             let time = current.getHours();
 
-            if (day >= 6 && day <= 9) {
-                if (time <= 9 || time >= 16) {
-                    alert('DRAW 이벤트는 매일 오전 10시에 오픈됩니다.');
-                } else {
-                    window.location.href = 'https://my-adot.onelink.me/YSNe/giziuu8h';
-                }
-            }
+
+                    window.location.href = 'https://my-adot.onelink.me/MAbS/gp5w6dig';
+                
         });
 
         // function startCountdown() {
