--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,10 +10,8 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://l.kolonmall.com/JV7w?af_xp=custom&pid=facebook&c=meta_feed_purchase&af_adset=ALL_al_mf_3565_rt_pur&af_ad=KM_KM_howind_ALL_B_230912&af_dp=kolonmall-appsflyer%3A%2F%2F&deep_link_value=%2FSearch%3Fkeyword%3D%EA%B0%80%EB%B3%8D%EA%B2%8C%EC%9E%85%EB%8A%94%EB%B0%94%EB%9E%8C%EB%A7%89%EC%9D%B4&af_web_dp=https%3A%2F%2Fwww.kolonmall.com%2FSearch%3Fkeyword%3D%EA%B0%80%EB%B3%8D%EA%B2%8C%EC%9E%85%EB%8A%94%EB%B0%94%EB%9E%8C%EB%A7%89%EC%9D%B4&utm_source=meta&utm_campaign=meta_feed_purchase&utm_medium=ALL_al_mf_3565_rt_pur&utm_content=KM_KM_howind_ALL_B_230912&utm_term=benefit&utm_source=meta&utm_campaign=meta_feed_purchase&utm_medium=ALL_al_mf_3565_rt_pur&utm_content=KM_KM_howind_ALL_B_230912&utm_term=benefit&af_click_lookback=1d&is_retargeting=true&af_reengagement_window=7d&af_force_deeplink=true&af_ad_type=benefit1&af_ios_url=https%3A%2F%2Fwww.kolonmall.com%2FSearch%3Fkeyword%3D%25EA%25B0%2580%25EB%25B3%258D%25EA%25B2%258C%25EC%259E%2585%25EB%258A%2594%25EB%25B0%2594%25EB%259E%258C%25EB%25A7%2589%25EC%259D%25B4">Kolon OneLink with af_ios_url</h1>
+      <h1><a href="https://click.dayoff.co.kr/SITP/24vd2s3z?af_force_deeplink=true">https://click.dayoff.co.kr/SITP/24vd2s3z?af_force_deeplink=true</h1>
     </main>
 </body>
 
 </html>
-
-
