--- a/onelink_test.html
+++ b/onelink_test.html
@@ -11,7 +11,9 @@
     <main>
       <h1><a href="https://www.google.com">Google</h1>
       <h1><a href="https://click.dayoff.co.kr/SITP/24vd2s3z?af_force_deeplink=true">https://click.dayoff.co.kr/SITP/24vd2s3z?af_force_deeplink=true</h1>
+      <h1><a href="https://dayoff.onelink.me/SITP/24vd2s3z?af_force_deeplink=true">https://dayoff.onelink.me/SITP/24vd2s3z?af_force_deeplink=true</h1>  
     </main>
 </body>
 
 </html>
+
