dayoff uri scheme

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -12,6 +12,7 @@
       <h1><a href="https://www.google.com">Google</h1>
       <h1><a href="https://click.dayoff.co.kr/SITP/24vd2s3z?af_force_deeplink=true">https://click.dayoff.co.kr/SITP/24vd2s3z?af_force_deeplink=true</h1>
       <h1><a href="https://dayoff.onelink.me/SITP/24vd2s3z?af_force_deeplink=true">https://dayoff.onelink.me/SITP/24vd2s3z?af_force_deeplink=true</h1>  
+      <h1><a href="dayoff://af?af_deeplink=true&af_dp=dayoff%3A%2F%2F&af_force_deeplink=true&af_xp=custom&campaign=None&deep_link_value=dayoff%3A%2F%2Fhotels%2F36428612&media_source=Dalma_Test&shortlink=24vd2s3z&source_caller=ui">dayoff://af?af_deeplink=true&af_dp=dayoff%3A%2F%2F&af_force_deeplink=true&af_xp=custom&campaign=None&deep_link_value=dayoff%3A%2F%2Fhotels%2F36428612&media_source=Dalma_Test&shortlink=24vd2s3z&source_caller=ui</h1>  
     </main>
 </body>
 
