--- a/test_smart_script.html
+++ b/test_smart_script.html
@@ -1,33 +1,86 @@
 <html data-seed="" data-seed-scale-color="dark" data-seed-scale-letter-spacing="ios">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,viewport-fit=cover">
-    <meta property="og:url" content="https://landkit.krrt.io/pages/53gazi/">
-    <meta property="og:type" content="article">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="">
-    <script async="" src="./test_smart_script_files/clarity.js"></script>
-    <script type="text/javascript" async="" src="./test_smart_script_files/destination"></script>
-    <script async="" src="./test_smart_script_files/jcxdfkjnsg"></script>
-    <script async="" src="./test_smart_script_files/gtm.js"></script>
-    <script src="./test_smart_script_files/bridge.js"></script>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-5KF2M2B6');</script>
-</head>
-<body>
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5KF2M2B6" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><div id="root"><main style="max-width:500px;margin:auto;padding-top:env(safe-area-inset-top);margin-bottom:env(safe-area-inset-bottom)"><div style="width:100%;padding-block:24px;padding-inline:24px;display:flex;flex-direction:column;align-items:center;justify-content:center;background-color:var(--seed-scale-color-blue-400)"><button id="logging-btn-basic-test" data-id="test" style="cursor:pointer;display:flex;justify-content:center;align-items:center;padding:0px;width:100%;height:50px;border:none;border-radius:8px;background-color:#f2f3f6"><p style="width:fit-content;pointer-events:none;font-size:18px;font-weight:700;color:#212124">Click me</p></button></div></main></div><input type="hidden" id="uid" name="uid" value="test"><script src="./test_smart_script_files/react.production.min.js"></script><script src="./test_smart_script_files/react-dom.production.min.js"></script>
-  <script type="text/javascript" src="https://github.com/AppsFlyerSDK/appsflyer-onelink-smart-script/blob/main/scripts/onelink-smart-script-v2.7.3.js"></script>
-  <script>
-    var oneLinkURL = "https://daangn.onelink.me/oWdR";
-    var mediaSource = {keys:["utm_source","pid"],defaultValue:"web"};
-    var campaign = {keys:["utm_campaign","c"],defaultValue:"web_campaign"};
-    var adSet = {keys:["utm_medium"]};
-    var af_dp = {paramKey:"af_dp",keys:["af_dp"],overrideValues:{realtyhome:"karrot%3A%2F%2Fminikarrot%2Frouter%3Fremote%3Dhttps%253A%252F%252Frealty.karrotwebview.com%252F%253Freferrer%253Dmarketing_blindtest_2402%26navbar%3Dfalse%26scrollable%3Dfalse",jobshome:"karrot%3A%2F%2Fminikarrot%2Frouter%3Fremote%3Dhttps%253A%252F%252Fjobs.karrotwebview.com%252F%253Freferrer%253Dmarketing_unknown%26navbar%3Dfalse%26scrollable%3Dfalse",jobscreate:"karrot%3A%2F%2Fminikarrot%2Frouter%3Fremote%3Dhttps%253A%252F%252Fjobs.karrotwebview.com%252Fbiz%252Fjob-post%252Fcreate%253Freferrer%253Dmarketing_unknown%26navbar%3Dfalse%26scrollable%3Dfalse"},defaultValue:"karrot%3A%2F%2Fhome"},af_keywords={paramKey:"af_keywords",keys:["utm_term"]},deepLinkValue={keys:["deep_link_value"],overrideValues:{realtyhome:"karrot%3A%2F%2Fminikarrot%2Frouter%3Fremote%3Dhttps%253A%252F%252Frealty.karrotwebview.com%252F%253Freferrer%253Dmarketing_blindtest_2402%26navbar%3Dfalse%26scrollable%3Dfalse",jobshome:"karrot%3A%2F%2Fminikarrot%2Frouter%3Fremote%3Dhttps%253A%252F%252Fjobs.karrotwebview.com%252F%253Freferrer%253Dmarketing_unknown%26navbar%3Dfalse%26scrollable%3Dfalse",jobscreate:"karrot%3A%2F%2Fminikarrot%2Frouter%3Fremote%3Dhttps%253A%252F%252Fjobs.karrotwebview.com%252Fbiz%252Fjob-post%252Fcreate%253Freferrer%253Dmarketing_unknown%26navbar%3Dfalse%26scrollable%3Dfalse"},defaultValue:"karrot%3A%2F%2Fhome"};
-    var is_retargeting = {paramKey:"is_retargeting",keys:["is_retargeting"],defaultValue:"TRUE"};
-    var custom_ss_ui = {paramKey:"af_ss_ui",defaultValue:"true"};
-    var custom_ss_gtm_ui = {paramKey:"af_ss_gtm_ui",defaultValue:"true"};
-    AF_SMART_SCRIPT_RESULT = window.AF_SMART_SCRIPT.generateOneLinkURL({oneLinkURL:oneLinkURL,afParameters:{mediaSource:mediaSource,campaign:campaign,adSet:adSet,afCustom:[af_dp,af_keywords,is_retargeting,custom_ss_ui,custom_ss_gtm_ui],deepLinkValue:deepLinkValue}});</script>
-</body>
+   <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+      <title></title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,viewport-fit=cover">
+      <meta property="og:url" content="https://landkit.krrt.io/pages/53gazi/">
+      <meta property="og:type" content="article">
+      <meta property="og:title" content="">
+      <meta property="og:description" content="">
+      <meta property="og:image" content="">
+      <script async="" src="./test_smart_script_files/clarity.js"></script>
+      <script type="text/javascript" async="" src="./test_smart_script_files/destination"></script>
+      <script async="" src="./test_smart_script_files/jcxdfkjnsg"></script>
+      <script async="" src="./test_smart_script_files/gtm.js"></script>
+      <script src="./test_smart_script_files/bridge.js"></script>
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-5KF2M2B6');</script><script type="text/javascript">(function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);})(window,document,"clarity","script","jcxdfkjnsg");</script>
+      <link href="./test_smart_script_files/reset.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="./test_smart_script_files/global.min.css">
+      <link id="favicon" rel="shortcut icon" type="image/svg+xml" href="data:image/svg+xml;charset=UTF-8,%3csvg width=&#39;60&#39; height=&#39;100&#39; viewBox=&#39;0 0 60 100&#39; fill=&#39;none&#39; xmlns=&#39;http://www.w3.org/2000/svg&#39;%3e%3cg clip-path=&#39;url(%23clip0_1802_22)&#39;%3e%3cpath d=&#39;M30.2377 36.8945C14.0893 36.8945 0.997925 49.7076 0.997925 65.856C0.997925 88.1831 30.3184 100.032 30.2377 99.998C30.157 100.032 59.4775 88.1831 59.4775 65.856C59.4775 49.7076 46.3861 36.8945 30.2377 36.8945ZM30.2377 77.5781C28.0486 77.5777 25.9088 76.9282 24.0888 75.7117C22.2688 74.4952 20.8504 72.7664 20.0129 70.7438C19.1755 68.7212 18.9566 66.4957 19.3839 64.3487C19.8112 62.2017 20.8655 60.2297 22.4136 58.6819C23.9617 57.1341 25.934 56.0801 28.081 55.6532C30.2281 55.2262 32.4536 55.4455 34.476 56.2834C36.4984 57.1212 38.227 58.5399 39.4432 60.3601C40.6594 62.1803 41.3085 64.3203 41.3085 66.5094C41.3085 67.9631 41.0221 69.4026 40.4657 70.7457C39.9093 72.0887 39.0938 73.309 38.0658 74.3369C37.0378 75.3647 35.8173 76.18 34.4741 76.7362C33.131 77.2923 31.6914 77.5784 30.2377 77.5781Z&#39; fill=&#39;%23FF6F0F&#39;/%3e%3cpath d=&#39;M36.8217 0C29.9978 0 25.2468 4.76709 24.4987 10.3811C15.4001 7.8665 8.27161 14.761 8.27161 22.3916C8.27161 28.2093 12.2603 32.9119 17.6041 34.4384C21.9054 35.6665 29.6489 34.753 29.6489 34.753C29.6106 32.8715 31.3428 30.8066 34.0127 28.9272C41.609 23.5814 47.5557 21.0627 48.4753 13.775C49.4352 6.16657 43.7727 0 36.8217 0Z&#39; fill=&#39;%2300A05B&#39;/%3e%3c/g%3e%3cdefs%3e%3cclipPath id=&#39;clip0_1802_22&#39;%3e%3crect width=&#39;60&#39; height=&#39;100&#39; fill=&#39;white&#39;/%3e%3c/clipPath%3e%3c/defs%3e%3c/svg%3e">
+      <script>(()=>{document.documentElement.dataset.seed="";var d=window.matchMedia("(prefers-color-scheme: dark)"),a=()=>{document.documentElement.dataset.seedScaleColor=d.matches?"dark":"light"};"addEventListener"in d?d.addEventListener("change",a):"addListener"in d&&d.addListener(a),a()})();</script>
+      <style>* {
+         user-select: none;
+         -webkit-user-select: none;
+         -webkit-tap-highlight-color: initial;
+         -webkit-font-smoothing: antialiased;
+         box-sizing: border-box;
+         }
+         ::-webkit-scrollbar {
+         display: none;
+         }
+         @font-face {
+         font-family: "KarrotSans";
+         src: url("https://fonts.landkit.app/KarrotSans-Heavy.woff2") format("woff2"), url("https://fonts.landkit.app/KarrotSans-Heavy.woff") format("woff");
+         font-weight: 900;
+         }
+         @font-face {
+         font-family: "KarrotSans";
+         src: url("https://fonts.landkit.app/KarrotSans-Bold.woff2") format("woff2"), url("https://fonts.landkit.app/KarrotSans-Bold.woff") format("woff");
+         font-weight: 700;
+         }
+         @font-face {
+         font-family: "KarrotSans";
+         src: url("https://fonts.landkit.app/KarrotSans-Regular.woff2") format("woff2"), url("https://fonts.landkit.app/KarrotSans-Regular.woff") format("woff");
+         font-weight: 500;
+         }
+         body {
+         font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji";
+         }
+         strong {
+         font-weight: 700;
+         }
+         h1, h2, h3, h4, h5, h6, p, span, body, html {
+         word-break: keep-all;
+         margin: 0;
+         padding: 0;
+         font-size: 100%;
+         letter-spacing: -0.02em;
+         }
+      </style>
+      <script type="module" crossorigin="" src="./test_smart_script_files/index-b2edc23e.js"></script>
+   </head>
+   <body>
+      <noscript>
+         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5KF2M2B6" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+      </noscript>
+      <div id="root">
+         <main style="max-width:500px;margin:auto;padding-top:env(safe-area-inset-top);margin-bottom:env(safe-area-inset-bottom)">
+            <div style="width:100%;padding-block:24px;padding-inline:24px;display:flex;flex-direction:column;align-items:center;justify-content:center;background-color:var(--seed-scale-color-blue-400)">
+               <button id="logging-btn-basic-test" data-id="test" style="cursor:pointer;display:flex;justify-content:center;align-items:center;padding:0px;width:100%;height:50px;border:none;border-radius:8px;background-color:#f2f3f6">
+                  <p style="width:fit-content;pointer-events:none;font-size:18px;font-weight:700;color:#212124">Click me</p>
+               </button>
+            </div>
+         </main>
+      </div>
+      <input type="hidden" id="uid" name="uid" value="test">
+      <script src="./test_smart_script_files/react.production.min.js"></script>
+      <script src="./test_smart_script_files/react-dom.production.min.js"></script>
+      <script type="text/javascript" src="https://github.com/AppsFlyerSDK/appsflyer-onelink-smart-script/blob/main/scripts/onelink-smart-script-v2.7.3.js"></script>
+      <script>
+         var oneLinkURL="https://daangn.onelink.me/oWdR",mediaSource={keys:["utm_source","pid"],defaultValue:"web"},campaign={keys:["utm_campaign","c"],defaultValue:"web_campaign"},adSet={keys:["utm_medium"]},af_dp={paramKey:"af_dp",keys:["af_dp"],overrideValues:{realtyhome:"karrot://minikarrot/router?remote\x3dhttps%3A%2F%2Frealty.karrotwebview.com\x26navbar\x3dfalse\x26scrollable\x3dfalse",jobshome:"karrot%3A%2F%2Fminikarrot%2Frouter%3Fremote%3Dhttps%253A%252F%252Fjobs.karrotwebview.com%252F%253Freferrer%253Dmarketing_unknown%26navbar%3Dfalse%26scrollable%3Dfalse",
+         jobscreate:"karrot%3A%2F%2Fminikarrot%2Frouter%3Fremote%3Dhttps%253A%252F%252Fjobs.karrotwebview.com%252Fbiz%252Fjob-post%252Fcreate%253Freferrer%253Dmarketing_unknown%26navbar%3Dfalse%26scrollable%3Dfalse"},defaultValue:"karrot%3A%2F%2Fhome"},af_keywords={paramKey:"af_keywords",keys:["utm_term"]},custom_ss_ui={paramKey:"af_ss_ui",defaultValue:"true"},custom_ss_gtm_ui={paramKey:"af_ss_gtm_ui",defaultValue:"true"};window.AF_DP=af_dp;
+         window.AF_SMART_SCRIPT_RESULT=window.AF_SMART_SCRIPT.generateOneLinkURL({oneLinkURL:oneLinkURL,afParameters:{mediaSource:mediaSource,campaign:campaign,adSet:adSet,afCustom:[af_dp,af_keywords,custom_ss_ui,custom_ss_gtm_ui]}});
+      </script>
+   </body>
 </html>
