cleansed code snippet

--- a/test_smart_script.html
+++ b/test_smart_script.html
@@ -74,8 +74,8 @@
          </main>
       </div>
       <input type="hidden" id="uid" name="uid" value="test">
-      <script src="./test_smart_script_files/react.production.min.js"></script>
-      <script src="./test_smart_script_files/react-dom.production.min.js"></script>
+      <script src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
+      <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
       <script type="text/javascript" src="https://github.com/AppsFlyerSDK/appsflyer-onelink-smart-script/blob/main/scripts/onelink-smart-script-v2.7.3.js"></script>
       <script>
          var oneLinkURL="https://daangn.onelink.me/oWdR",mediaSource={keys:["utm_source","pid"],defaultValue:"web"},campaign={keys:["utm_campaign","c"],defaultValue:"web_campaign"},adSet={keys:["utm_medium"]},af_dp={paramKey:"af_dp",keys:["af_dp"],overrideValues:{realtyhome:"karrot://minikarrot/router?remote\x3dhttps%3A%2F%2Frealty.karrotwebview.com\x26navbar\x3dfalse\x26scrollable\x3dfalse",jobshome:"karrot%3A%2F%2Fminikarrot%2Frouter%3Fremote%3Dhttps%253A%252F%252Fjobs.karrotwebview.com%252F%253Freferrer%253Dmarketing_unknown%26navbar%3Dfalse%26scrollable%3Dfalse",
