oops i did it again

--- a/test_smart_script.html
+++ b/test_smart_script.html
@@ -77,8 +77,7 @@
       <script src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
       <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
 
-      <
-      script >
+      <script >
           // The initialization code follows the Smart Script code below
       
           function _iterableToArrayLimit(t, e) {
