changed it again

--- a/novo_test.html
+++ b/novo_test.html
@@ -2510,25 +2510,14 @@
         event: "SmartScript fired"
       });
       undefined
-    </script>undefined<script type="text/javascript" id="">
-      ! function(a, e, f, k, h, g, c, b, d) {
-        a.AppsFlyerSdkObject = h;
-        a.AF = a.AF || function() {
-          (a.AF.q = a.AF.q || []).push([Date.now()].concat(Array.prototype.slice.call(arguments)))
-        };
-        a.AF.id = a.AF.id || c;
-        a.AF.plugins = {};
-        b = e.createElement(f);
-        d = e.getElementsByTagName(f)[0];
-        b.async = 1;
-        b.src = "https://websdk.appsflyer.com?" + (0 undefined < g.length ? "st\x3d" + g.split(",").sort().join(",") + "\x26" : "") + (0 undefined < c.length ? "af_id\x3d" + c : "");
-        d.parentNode.insertBefore(b, d)
-      }(window, document, "script", 0, "AF", "banners", {
-        banners: {
-          key: "0c3846bd-d06c-480c-beb7-15625c7e892b"
-        }
-      });
-      AF("banners", "showBanner");
-    </script>undefined<div id="batBeacon969092290513" style="width: 0px; height: 0px; display: none; visibility: hidden;">undefined<img id="batBeacon202994086490" width="0" height="0" alt="" src="./novo_test_files/0" style="width: 0px; height: 0px; display: none; visibility: hidden;">undefined</div>undefined<iframe id="_hjSafeContext_54924225" title="_hjSafeContext" tabindex="-1" aria-hidden="true" src="./novo_test_files/saved_resource.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>undefined
+      <script>
+!function(t,e,n,s,a,c,i,o,p){t.AppsFlyerSdkObject=a,t.AF=t.AF||function(){
+(t.AF.q=t.AF.q||[]).push([Date.now()].concat(Array.prototype.slice.call(arguments)))},
+t.AF.id=t.AF.id||i,t.AF.plugins={},o=e.createElement(n),p=e.getElementsByTagName(n)[0],o.async=1,
+o.src="https://websdk.appsflyer.com?"+(c.length>0?"st="+c.split(",").sort().join(",")+"&":"")+(i.length>0?"af_id="+i:""),
+p.parentNode.insertBefore(o,p)}(window,document,"script",0,"AF", "pba,banners",{pba: {webAppId: "ccb13da1-fd6c-485c-85a0-abf7a93a5b01"}, banners: {key: "0c3846bd-d06c-480c-beb7-15625c7e892b"}});
+AF('banners', 'showBanner', { bannerZIndex: 1000, additionalParams: { p1: "v1", p2: "v2"}});
+</script>    
+    undefined<div id="batBeacon969092290513" style="width: 0px; height: 0px; display: none; visibility: hidden;">undefined<img id="batBeacon202994086490" width="0" height="0" alt="" src="./novo_test_files/0" style="width: 0px; height: 0px; display: none; visibility: hidden;">undefined</div>undefined<iframe id="_hjSafeContext_54924225" title="_hjSafeContext" tabindex="-1" aria-hidden="true" src="./novo_test_files/saved_resource.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>undefined
   </body>undefined<iframe id="__JSBridgeIframe_1.0__" title="jsbridge___JSBridgeIframe_1.0__" style="display: none;" src="./novo_test_files/saved_resource(2).html"></iframe>undefined<iframe id="__JSBridgeIframe_SetResult_1.0__" title="jsbridge___JSBridgeIframe_SetResult_1.0__" style="display: none;" src="./novo_test_files/saved_resource(3).html"></iframe>undefined<iframe id="__JSBridgeIframe__" title="jsbridge___JSBridgeIframe__" style="display: none;" src="./novo_test_files/saved_resource(4).html"></iframe>undefined<iframe id="__JSBridgeIframe_SetResult__" title="jsbridge___JSBridgeIframe_SetResult__" style="display: none;" src="./novo_test_files/saved_resource(5).html"></iframe>undefined
 </html>
