--- a/novo_test.html
+++ b/novo_test.html
@@ -5,12 +5,7 @@
   <script async src="https://websdk.appsflyer.com?st=banners&"></script>
   <script async src="https://websdk.appsflyer.com?st=pba&"></script>
 <body>
-<script type="text/javascript" id>!function(t,e,n,s,a,c,i,o,p){t.AppsFlyerSdkObject=a,t.AF=t.AF||function(){
-(t.AF.q=t.AF.q||[]).push([Date.now()].concat(Array.prototype.slice.call(arguments)))},
-t.AF.id=t.AF.id||i,t.AF.plugins={},o=e.createElement(n),p=e.getElementsByTagName(n)[0],o.async=1,
-o.src="https://websdk.appsflyer.com?"+(c.length>0?"st="+c.split(",").sort().join(",")+"&":"")+(i.length>0?"af_id="+i:""),
-p.parentNode.insertBefore(o,p)}(window,document,"script",0,"AF", "pba,banners",{pba: {webAppId: "ccb13da1-fd6c-485c-85a0-abf7a93a5b01"}, banners: {key: "0c3846bd-d06c-480c-beb7-15625c7e892b"}});
-AF('banners', 'showBanner', { bannerZIndex: 1000, additionalParams: { p1: "v1", p2: "v2"}});
-</script>
+  <script type="text/javascript" id>!function(t,e,n,s,a,c,i,o,p){t.AppsFlyerSdkObject=a,t.AF=t.AF||function(){(t.AF.q=t.AF.q||[]).push([Date.now()].concat(Array.prototype.slice.call(arguments)))},t.AF.id=t.AF.id||i,t.AF.plugins={},o=e.createElement(n),p=e.getElementsByTagName(n)[0],o.async=1,o.src="https://websdk.appsflyer.com?"+(c.length>0?"st="+c.split(",").sort().join(",")+"&":"")+(i.length>0?"af_id="+i:""),p.parentNode.insertBefore(o,p)}(window,document,"script",0,"AF", "pba,banners",{pba: {webAppId: "ccb13da1-fd6c-485c-85a0-abf7a93a5b01"}, banners: {key: "0c3846bd-d06c-480c-beb7-15625c7e892b"}});AF('banners', 'showBanner', { bannerZIndex: 1000, additionalParams: { p1: "v1", p2: "v2"}});
+  </script>
 </body>
-  </html>
+</html>
